--- a/TiemChung/include/secondary.phtml
+++ b/TiemChung/include/secondary.phtml
@@ -39,7 +39,7 @@
                 <a href="?action=vacxintreem">Gói Vacxin cho trẻ em</a>
             </li>
             <li>
-                <a href="?action=timtrungtam">Tìm trung tâm VNVC</a>
+                <a href="?TinhThanh=All&action=timtrungtam">Tìm trung tâm VNVC</a>
             </li>
             <li>
                 <a href="?action=tuvan">Tư vấn</a>
