--- a/TiemChung/view/BangGiaVacxin.phtml
+++ b/TiemChung/view/BangGiaVacxin.phtml
@@ -62,9 +62,9 @@
             $result = array();
             for ($i = $start; $i < $limit; $i++)
             {
-                $club = new ClubModel();
-                $club = $data[$i];
-                $result[] = $club;
+                $v = new VacxinModel();
+                $v = $data[$i];
+                $result[] = $v;
             }
         ?>
         <!-- PHẦN HIỂN THỊ -->
@@ -105,12 +105,12 @@
             // PHẦN HIỂN THỊ PHÂN TRANG
             // HIỂN THỊ PHÂN TRANG
  
-            echo '<a href="?action=clublist&page=1" style="width:50px; display:inline-block">First</a> | ';
+            echo '<a href="?action=banggia&page=1" style="width:50px; display:inline-block">First</a> | ';
 
             // nếu current_page > 1 và total_page > 1 mới hiển thị nút prev
             if ($current_page > 1 && $total_page > 1)
             {
-                echo '<a href="?action=clublist&page='.($current_page-1).'" style="width:50px; display:inline-block">Prev</a> | ';
+                echo '<a href="?action=banggia&page='.($current_page-1).'" style="width:50px; display:inline-block">Prev</a> | ';
             }
  
             // Lặp khoảng giữa
@@ -123,17 +123,17 @@
                     echo '<span style="width:50px; display:inline-block">'.$i.'</span> | ';
                 }
                 else{
-                    echo '<a href="?action=clublist&page='.$i.'" style="width:50px; display:inline-block">'.$i.'</a> | ';
+                    echo '<a href="?action=banggia&page='.$i.'" style="width:50px; display:inline-block">'.$i.'</a> | ';
                 }
             }
  
             // nếu current_page < $total_page và total_page > 1 mới hiển thị nút prev
             if ($current_page < $total_page && $total_page > 1)
             {
-                echo '<a href="?action=clublist&page='.($current_page+1).'" style="width:50px; display:inline-block">Next</a> | ';
+                echo '<a href="?action=banggia&page='.($current_page+1).'" style="width:50px; display:inline-block">Next</a> | ';
             }
 
-            echo '<a href="?action=clublist&page='.($total_page).'" style="width:50px; display:inline-block">Last</a> | ';
+            echo '<a href="?action=banggia&page='.($total_page).'" style="width:50px; display:inline-block">Last</a> | ';
         ?>
     </div>
 </div>
