--- a/TiemChung/view/TimTrungTam.phtml
+++ b/TiemChung/view/TimTrungTam.phtml
@@ -6,18 +6,42 @@
 </script>
 
 <h3>TÌM TRUNG TÂM VNVC</h3>
+
+<form method="get" onsubmit="return check();">
+    Tỉnh / thành phố: 
+    <select name="TinhThanh" class="combobox" id="combobox"  >
+        <option value='All' selected>All</option>
+        <?php
+            foreach ($tt as $item)
+            {
+                ?>
+                    <option value='<?php echo $item; ?>'>
+                        <?php echo $item; ?> 
+                    </option>
+                <?php
+            }
+        ?>
+    </select>
+    
+    &ensp;
+    <input type="submit" value="timtrungtam" style="width: 100px;"/>
+    <input type="hidden" name="action" value="timtrungtam"/> &ensp;
+    <span id="message"> </span>
+</form>
+<br/><br/><hr/><br/>
+
 <form>
 <div>
     <table class="empty-table">
         <thead>
             <tr>
-                <th>MaTT</th>
-                <th>TenTT</th>
+                <th>Mã</th>
+                <th>Tên trung tâm</th>
                 <th>SDT</th>
-                <th>TinhThanh</th>
-                <th>QuanHuyen</th>
-                <th>PhongXa</th>
-                <th>SoNha</th>
+                <th>Tỉnh thành</th>
+                <th>Quận huyện</th>
+                <th>Phường xã</th>
+                <th>Số nhà</th>
             </tr>
         </thead>
         <tbody>
@@ -27,7 +51,7 @@
             $total_records = count($data);
 
             // Tìm limit và current page
-            $limit = 10;
+            $limit = 9;
             $current_page = isset($_GET['page']) ? $_GET['page'] : 1;
 
             //  Tổng pages
@@ -44,8 +68,8 @@
             // Tìm Start
             $start = ($current_page - 1) * $limit;
 
-            if ($total_records - $start > 10)
-                $limit = $start + 10;
+            if ($total_records - $start > 9)
+                $limit = $start + 9;
             else
                 $limit = $total_records;
 
@@ -95,12 +119,12 @@
             // PHẦN HIỂN THỊ PHÂN TRANG
             // HIỂN THỊ PHÂN TRANG
  
-            echo '<a href="?action=clublist&page=1" style="width:50px; display:inline-block">First</a> | ';
+            echo '<a href="?action=timtrungtam&page=1" style="width:50px; display:inline-block">First</a> | ';
 
             // nếu current_page > 1 và total_page > 1 mới hiển thị nút prev
             if ($current_page > 1 && $total_page > 1)
             {
-                echo '<a href="?action=clublist&page='.($current_page-1).'" style="width:50px; display:inline-block">Prev</a> | ';
+                echo '<a href="?action=timtrungtam&page='.($current_page-1).'" style="width:50px; display:inline-block">Prev</a> | ';
             }
  
             // Lặp khoảng giữa
@@ -113,17 +137,17 @@
                     echo '<span style="width:50px; display:inline-block">'.$i.'</span> | ';
                 }
                 else{
-                    echo '<a href="?action=clublist&page='.$i.'" style="width:50px; display:inline-block">'.$i.'</a> | ';
+                    echo '<a href="?action=timtrungtam&page='.$i.'" style="width:50px; display:inline-block">'.$i.'</a> | ';
                 }
             }
  
             // nếu current_page < $total_page và total_page > 1 mới hiển thị nút prev
             if ($current_page < $total_page && $total_page > 1)
             {
-                echo '<a href="?action=clublist&page='.($current_page+1).'" style="width:50px; display:inline-block">Next</a> | ';
+                echo '<a href="?action=timtrungtam&page='.($current_page+1).'" style="width:50px; display:inline-block">Next</a> | ';
             }
 
-            echo '<a href="?action=clublist&page='.($total_page).'" style="width:50px; display:inline-block">Last</a> | ';
+            echo '<a href="?action=timtrungtam&page='.($total_page).'" style="width:50px; display:inline-block">Last</a> | ';
         ?>
     </div>
 </div>
