Connect API neo4j

--- a/TiemChung/template/template.phtml
+++ b/TiemChung/template/template.phtml
@@ -12,17 +12,17 @@
             </div>              
             <div id="wrapper">   
                 <div id="smallbar"></div> 
-                <div id="content">    
+                <div id="content" style="height: 800px;">    
                     <!-- ------------------------------------ -->
                     <!-- ------------------------------------ -->
                     <!-- BEGIN: Nội dung chính của trang web  -->
-                    <div id="primary">                    
+                    <div id="primary" style="height: 800px;">                    
                         <?php require($VIEW); ?>
                     </div>
                     <!-- END: Nội dung chính của trang web  -->
                     <!-- ------------------------------------ -->
                     <!-- ------------------------------------ -->
-                    <div id="secondary">
+                    <div id="secondary" style="height: 800px;">
                         <?php require("include/secondary.phtml"); ?>                    
                     </div>
                 </div>    
